fix nav alignment and make responsive

--- a/src/_header.scss
+++ b/src/_header.scss
@@ -39,6 +39,7 @@
 
 .nav-items {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
 }
 
