--- a/src/index.scss
+++ b/src/index.scss
@@ -108,15 +108,12 @@ main {
   }
 }
 
-.site-title {
-  font-family: 'Inter', sans-serif;
-  text-decoration: none;
-  font-weight: 700;
-  font-size: 28px;
-  color: black;
-  img {
-    height: 40px;
-  }
+.site-home {
+  display: inline-block;
+}
+
+.site-logo {
+  height: 40px;
 }
 
 .home {
